feat(publications): initial set up for publication page

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,78 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
-@book{einstein1956investigations,
+@inproceedings{vougiouklis2023fastrat,
   bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+  title={Fastrat: Fast and efficient cross-lingual text-to-sql semantic parsing},
+  author={Vougiouklis, Pavlos and Papasarantopoulos, Nikos and Zheng, Danna and Tuckey, David and Diao, Chenxin and Shen, Zhili and Pan, Jeff},
+  booktitle={Proceedings of the 13th International Joint Conference on Natural Language Processing and the 3rd Conference of the Asia-Pacific Chapter of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  pages={564--576},
+  year={2023}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
+@inproceedings{shen2024improving,
+  title={Improving Retrieval-augmented Text-to-SQL with AST-based Ranking and Schema Pruning},
+  author={Shen, Zhili and Vougiouklis, Pavlos and Diao, Chenxin and Vyas, Kaustubh and Ji, Yuanyi and Pan, Jeff Z},
+  booktitle={Proceedings of the 2024 Conference on Empirical Methods in Natural Language Processing},
+  pages={7865--7879},
+  year={2024}
+}
+
+@inproceedings{vyas2024llm,
+  title={From an LLM Swarm to a PDDL-empowered Hive: Planning Self-executed Instructions in a Multi-modal Jungle},
+  author={Vyas, Kaustubh and Graux, Damien and Yang, Yijun and Montella, S{\'e}bastien and Diao, Chenxin and Zhou, Wendi and Vougiouklis, Pavlos and Lai, Ruofei and Ren, Yang and Li, Keshuang and others},
+  booktitle={The Thirteenth International Conference on Learning Representations (ICLR) 2025},
+  year={2024}
+}
+
+@inproceedings{shen2025gear,
+  abbr={ACL Findings},
   bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
+  title={Gear: Graph-enhanced agent for retrieval-augmented generation},
+  author={Shen†, Zhili and Diao†, Chenxin and Vougiouklis†, Pavlos and Merita†, Pascual and Piramanayagam, Shriram and Graux, Damien and Tu, Dandan and Jiang, Zeren and Lai, Ruofei and Ren, Yang and others},
+  booktitle={The 63rd Annual Meeting of the Association for Computational Linguistics (ACL 2025)},
+  pages={12049--12072},
+  year={2025},
+  preview={gears.gif},
+  google_scholar_id={2osOgNQ5qMEC},
+  blog={https://gear-rag.github.io/},
+  arxiv={2412.18431},
+  doi={10.18653/v1/2025.findings-acl.624},
+  poster={gear_poster_acl2025.pdf},
   selected={true},
-  inspirehep_id = {3255}
+  annotation={†Equal contribution}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{wang2025positioning,
+  title={Positioning AI Tools to Support Online Harm Reduction Practice: Applications and Design Directions},
+  author={Wang, Kaixuan and Jacques, Jason T and Diao, Chenxin and Dreue, Carl-Cyril J},
+  journal={arXiv preprint arXiv:2506.22941},
+  year={2025}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@inproceedings{shen2025millions,
+  title={Millions of $$\backslash$text $\{$GeAR$\}$ $-s: Extending GraphRAG to Millions of Documents},
+  author={Shen, Zhili and Diao, Chenxin and Merita, Pascual and Vougiouklis, Pavlos and Pan, Jeff Z},
+  booktitle={LiveRAG Challenge in the 48th International ACM SIGIR Conference on Research and Development in Information Retrieval},
+  year={2025}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{wang2025hripbench,
+  title={Hripbench: Benchmarking llms in harm reduction information provision to support people who use drugs},
+  author={Wang, Kaixuan and Diao, Chenxin and Jacques, Jason T and Guo, Zhongliang and Zhao, Shuai},
+  journal={arXiv preprint arXiv:2507.21815},
+  year={2025}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+@inproceedings{piramanayagam2025lifesearch,
+  title={LifeSearch: Multimodal Lifelog Search System for LSC'25},
+  author={Piramanayagam, Shriram and Chen, Enting and Melo, Andre and Vougiouklis, Pavlos and Diao, Chenxin and Merita, Pascual and Jiang, Zeren and Lai, Ruofei and Pan, Jeff Z},
+  booktitle={Proceedings of the 8th Annual ACM Workshop on the Lifelog Search Challenge},
+  pages={28--33},
+  year={2025}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@inproceedings{melo2025don,
+  title={Don’t Forget the Base Retriever! A Low-Resource Graph-based Retriever for Multi-hop Question Answering},
+  author={Melo, Andr{\'e} and Chen, Enting and Vougiouklis, Pavlos and Diao, Chenxin and Piramanayagam, Shriram and Lai, Ruofei and Pan, Jeff Z},
+  booktitle={Proceedings of the 2025 Conference on Empirical Methods in Natural Language Processing: Industry Track},
+  pages={2564--2572},
+  year={2025}
 }
