feat(publication): init commit for publication

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,37 +1,38 @@
-@inproceedings{vougiouklis2023fastrat,
+@inproceedings{melo2025don,
+  abbr={EMNLP},
   bibtex_show={true},
-  title={Fastrat: Fast and efficient cross-lingual text-to-sql semantic parsing},
-  author={Vougiouklis, Pavlos and Papasarantopoulos, Nikos and Zheng, Danna and Tuckey, David and Diao, Chenxin and Shen, Zhili and Pan, Jeff},
-  booktitle={Proceedings of the 13th International Joint Conference on Natural Language Processing and the 3rd Conference of the Asia-Pacific Chapter of the Association for Computational Linguistics (Volume 1: Long Papers)},
-  pages={564--576},
-  year={2023}
+  title={Don’t Forget the Base Retriever! A Low-Resource Graph-based Retriever for Multi-hop Question Answering},
+  author={Melo, Andr{\'e} and Chen, Enting and Vougiouklis, Pavlos and Diao, Chenxin and Piramanayagam, Shriram and Lai, Ruofei and Pan, Jeff Z},
+  booktitle={Proceedings of the 2025 Conference on Empirical Methods in Natural Language Processing: Industry Track},
+  pages={2564--2572},
+  poster={griever_poster_emnlp2025.pdf},
+  year={2025},
+  doi={10.18653/v1/2025.emnlp-industry.174},
+  google_scholar_id_no_citation={W7OEmFMy1HYC},
 }
 
-@inproceedings{shen2024improving,
-  title={Improving Retrieval-augmented Text-to-SQL with AST-based Ranking and Schema Pruning},
-  author={Shen, Zhili and Vougiouklis, Pavlos and Diao, Chenxin and Vyas, Kaustubh and Ji, Yuanyi and Pan, Jeff Z},
-  booktitle={Proceedings of the 2024 Conference on Empirical Methods in Natural Language Processing},
-  pages={7865--7879},
-  year={2024}
-}
-
-@inproceedings{vyas2024llm,
-  title={From an LLM Swarm to a PDDL-empowered Hive: Planning Self-executed Instructions in a Multi-modal Jungle},
-  author={Vyas, Kaustubh and Graux, Damien and Yang, Yijun and Montella, S{\'e}bastien and Diao, Chenxin and Zhou, Wendi and Vougiouklis, Pavlos and Lai, Ruofei and Ren, Yang and Li, Keshuang and others},
-  booktitle={The Thirteenth International Conference on Learning Representations (ICLR) 2025},
-  year={2024}
+@article{wang2025hripbench,
+  abbr={Preprint},
+  bibtex_show={true},
+  title={HRIPBench: Benchmarking LLMs in Harm Reduction Information Provision to Support People Who Use Drugs},
+  author={Wang, Kaixuan and Diao, Chenxin and Jacques, Jason T and Guo, Zhongliang and Zhao, Shuai},
+  journal={arXiv preprint arXiv:2507.21815},
+  year={2025},
+  arxiv={2507.21815},
+  google_scholar_id_no_citation={Tyk-4Ss8FVUC},
+  dataset={https://huggingface.co/datasets/RayK/Harm_Reduction_QA_dataset_basic}
 }
 
 @inproceedings{shen2025gear,
   abbr={ACL Findings},
   bibtex_show={true},
-  title={Gear: Graph-enhanced agent for retrieval-augmented generation},
+  title={GeAR: Graph-enhanced Agent for Retrieval-augmented Generation},
   author={Shen†, Zhili and Diao†, Chenxin and Vougiouklis†, Pavlos and Merita†, Pascual and Piramanayagam, Shriram and Graux, Damien and Tu, Dandan and Jiang, Zeren and Lai, Ruofei and Ren, Yang and others},
   booktitle={The 63rd Annual Meeting of the Association for Computational Linguistics (ACL 2025)},
   pages={12049--12072},
   year={2025},
   preview={gears.gif},
-  google_scholar_id={2osOgNQ5qMEC},
+  google_scholar_id_no_citation={2osOgNQ5qMEC},
   blog={https://gear-rag.github.io/},
   arxiv={2412.18431},
   doi={10.18653/v1/2025.findings-acl.624},
@@ -40,39 +41,118 @@
   annotation={†Equal contribution}
 }
 
-@article{wang2025positioning,
-  title={Positioning AI Tools to Support Online Harm Reduction Practice: Applications and Design Directions},
-  author={Wang, Kaixuan and Jacques, Jason T and Diao, Chenxin and Dreue, Carl-Cyril J},
-  journal={arXiv preprint arXiv:2506.22941},
-  year={2025}
-}
-
 @inproceedings{shen2025millions,
-  title={Millions of $$\backslash$text $\{$GeAR$\}$ $-s: Extending GraphRAG to Millions of Documents},
+  abbr={Workshop},
+  bibtex_show={true},
+  title={Millions of $$GeAR$$ -s: Extending GraphRAG to Millions of Documents},
   author={Shen, Zhili and Diao, Chenxin and Merita, Pascual and Vougiouklis, Pavlos and Pan, Jeff Z},
   booktitle={LiveRAG Challenge in the 48th International ACM SIGIR Conference on Research and Development in Information Retrieval},
-  year={2025}
-}
-
-@article{wang2025hripbench,
-  title={Hripbench: Benchmarking llms in harm reduction information provision to support people who use drugs},
-  author={Wang, Kaixuan and Diao, Chenxin and Jacques, Jason T and Guo, Zhongliang and Zhao, Shuai},
-  journal={arXiv preprint arXiv:2507.21815},
-  year={2025}
+  year={2025},
+  google_scholar_id_no_citation={zYLM7Y9cAGgC},
+  arxiv={2507.17399}
 }
 
 @inproceedings{piramanayagam2025lifesearch,
-  title={LifeSearch: Multimodal Lifelog Search System for LSC'25},
-  author={Piramanayagam, Shriram and Chen, Enting and Melo, Andre and Vougiouklis, Pavlos and Diao, Chenxin and Merita, Pascual and Jiang, Zeren and Lai, Ruofei and Pan, Jeff Z},
-  booktitle={Proceedings of the 8th Annual ACM Workshop on the Lifelog Search Challenge},
-  pages={28--33},
+  abbr={Workshop},
+  bibtex_show={true},
+  author = {Piramanayagam, Shriram and Chen, Enting and Melo, Andre and Vougiouklis, Pavlos and Diao, Chenxin and Merita, Pascual and Jiang, Zeren and Lai, Ruofei and Pan, Jeff Z.},
+  title = {LifeSearch: Multimodal Lifelog Search System for LSC'25},
+  year = {2025},
+  isbn = {9798400718571},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  url = {https://doi.org/10.1145/3729459.3748696},
+  doi = {10.1145/3729459.3748696},
+  abstract = {We introduce LifeSearch, a novel multimodal retrieval system developed for the Lifelog Search Challenge 2025 (LSC’25). Our proposed solution can query images across visual, spatial, and temporal domains. Central to our approach are spatial and temporal augmentation techniques, along with a time-constrained scoring mechanism. By integrating these methods with a hybrid retrieval strategy, LifeSearch improves the retrieval process, allowing users to execute complex lifelog queries and obtain highly relevant results.},
+  booktitle = {Proceedings of the 8th Annual ACM Workshop on the Lifelog Search Challenge},
+  pages = {28–33},
+  numpages = {6},
+  keywords = {Lifelogging, Lifelog Search Challenge, Multimodal Retrieval},
+  series = {LSC '25},
+  google_scholar_id_no_citation={Y0pCki6q_DkC}
+}
+
+@article{wang2025positioning,
+  abbr={Preprint},
+  bibtex_show={true},
+  title={Positioning AI Tools to Support Online Harm Reduction Practice: Applications and Design Directions},
+  author={Wang, Kaixuan and Jacques, Jason T and Diao, Chenxin and Dreue, Carl-Cyril J},
+  journal={arXiv preprint arXiv:2506.22941},
+  arxiv={2506.22941},
+  google_scholar_id_no_citation={IjCSPb-OGe4C},
   year={2025}
 }
 
-@inproceedings{melo2025don,
-  title={Don’t Forget the Base Retriever! A Low-Resource Graph-based Retriever for Multi-hop Question Answering},
-  author={Melo, Andr{\'e} and Chen, Enting and Vougiouklis, Pavlos and Diao, Chenxin and Piramanayagam, Shriram and Lai, Ruofei and Pan, Jeff Z},
-  booktitle={Proceedings of the 2025 Conference on Empirical Methods in Natural Language Processing: Industry Track},
-  pages={2564--2572},
-  year={2025}
+@inproceedings{vyas2024llm,
+  abbr={ICLR},
+  bibtex_show={true},
+  title={From an LLM Swarm to a PDDL-empowered Hive: Planning Self-executed Instructions in a Multi-modal Jungle},
+  author={Vyas, Kaustubh and Graux, Damien and Yang, Yijun and Montella, S{\'e}bastien and Diao, Chenxin and Zhou, Wendi and Vougiouklis, Pavlos and Lai, Ruofei and Ren, Yang and Li, Keshuang and others},
+  booktitle={The Thirteenth International Conference on Learning Representations (ICLR) 2025},
+  year={2024},
+  supp={https://github.com/dgraux/Hive-ICLR-2025},
+  openreview_id={QAAsnSRwgu},
+  arxiv={2412.12839},
+  google_scholar_id_no_citation={9yKSN-GCB0IC},
+  demo={https://drive.google.com/file/d/1weig7tDjEGB3NC3rkwcACeHDu-XjAgXJ/view},
+  poster={hive_poster_iclr2025.pdf},
 }
+
+@inproceedings{shen2024improving,
+  abbr={EMNLP},
+  bibtex_show={true},
+  title = "Improving Retrieval-augmented Text-to-{SQL} with {AST}-based Ranking and Schema Pruning",
+  author = "Shen†, Zhili  and
+    Vougiouklis†, Pavlos  and
+    Diao†, Chenxin  and
+    Vyas, Kaustubh  and
+    Ji, Yuanyi  and
+    Pan, Jeff Z.",
+  editor = "Al-Onaizan, Yaser  and
+    Bansal, Mohit  and
+    Chen, Yun-Nung",
+  booktitle = "Proceedings of the 2024 Conference on Empirical Methods in Natural Language Processing",
+  year = "2024",
+  address = "Miami, Florida, USA",
+  publisher = "Association for Computational Linguistics",
+  url = "https://aclanthology.org/2024.emnlp-main.449/",
+  doi = "10.18653/v1/2024.emnlp-main.449",
+  pages = "7865--7879",
+  arxiv={2407.03227},
+  poster={https://underline.io/lecture/107224-improving-retrieval-augmented-text-to-sql-with-ast-based-ranking-and-schema-pruning?posterExpanded=true},
+  video={https://underline.io/lecture/107224-improving-retrieval-augmented-text-to-sql-with-ast-based-ranking-and-schema-pruning},
+  slides={https://app.underline.io/downloadable_materials/lectures/107224/slideshow},
+  google_scholar_id_no_citation={d1gkVwhDpl0C},
+  preview={astres.gif},
+  selected={true},
+  annotation={†Equal contribution}
+}
+
+@inproceedings{vougiouklis2023fastrat,
+  abbr={AACL},
+  bibtex_show={true},
+  title = "{F}ast{RAT}: Fast and Efficient Cross-lingual Text-to-{SQL} Semantic Parsing",
+  author = "Vougiouklis, Pavlos  and
+    Papasarantopoulos, Nikos  and
+    Zheng, Danna  and
+    Tuckey, David  and
+    Diao, Chenxin  and
+    Shen, Zhili  and
+    Pan, Jeff",
+  editor = "Park, Jong C.  and
+    Arase, Yuki  and
+    Hu, Baotian  and
+    Lu, Wei  and
+    Wijaya, Derry  and
+    Purwarianti, Ayu  and
+    Krisnadhi, Adila Alfa",
+  booktitle = "Proceedings of the 13th International Joint Conference on Natural Language Processing and the 3rd Conference of the Asia-Pacific Chapter of the Association for Computational Linguistics (Volume 1: Long Papers)",
+  year = "2023",
+  address = "Nusa Dua, Bali",
+  publisher = "Association for Computational Linguistics",
+  url = "https://aclanthology.org/2023.ijcnlp-main.38/",
+  doi = "10.18653/v1/2023.ijcnlp-main.38",
+  pages = "564--576",
+  google_scholar_id_no_citation={u5HHmVD_uO8C},
+}
+
